--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.js && npm run copy-sw",
+    "copy-sw": "copy public\\service-worker.js dist\\",
     "watch": "webpack -w --config webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
+  },  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -53,6 +54,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "webpack": "^5.96.1",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
 }
